tests/baselines/reference/generatorTypeCheck7.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts(4,17): error TS2322: Type 'IterableIterator<number>' is not assignable to type 'WeirdIter'.
  Property 'hello' is missing in type 'IterableIterator<number>'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck7.ts (1 errors) ====
    interface WeirdIter extends IterableIterator<number> {
        hello: string;
    }
    function* g1(): WeirdIter { }
                    ~~~~~~~~~
!!! error TS2322: Type 'IterableIterator<number>' is not assignable to type 'WeirdIter'.
!!! error TS2322:   Property 'hello' is missing in type 'IterableIterator<number>'.